<resources>
    <string name="app_name">appcollage</string>
    <string name="hello">Hello appcollage!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">LOG IN</string>
    <string name="log_in">login</string>
    <string name="signup">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="user_name">Username</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="or_login_with">or login with</string>
    <string name="username_email">Username/Email Address</string>
    <string name="message_privacy_and_tc1">By signing up you are indicating that you have read </string>
    <string name="message_privacy_and_tc2">and agree to the </string>
    <string name="privacy_policy">&#160;Privacy Policy&#160;</string>
    <string name="and">and&#160;</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="message_privacy_and_tc">By signing up you are indicating that you have read \n
		and agree to the <b>Privacy Policy</b> and <b>Terms of Service.</b></string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="now">now!</string>
    <string name="welcome_back">WELCOME BACK, \n</string>
    <string name="home_user">WELCOME BACK</string>
    <string name="initiate">initiate</string>
    <string name="invite">invite</string>
    <string name="gallery">gallery</string>
    <string name="_gallery">GALLERY</string>
    <string name="groups">groups</string>
    <string name="edit_group_name">EDIT GROUP NAME</string>
    <string name="group">GROUPS</string>
    <string name="settings">settings</string>
    <string name="inbox">inbox</string>
    <string name="remove">remove</string>
    <string name="member">members</string>
    <string name="enter_new_group_name_here">Enter New Group Name Here</string>
    <string name="add">add</string>
    <string name="your_current_groups">Tap group name below to open group screen.</string>
    <string name="edit_group_msg">Tap group name below to edit</string>
    <string name="_invite">INVITE</string>
    <string name="_inbox">INBOX</string>
    <string name="title">TITLE</string>
    <string name="contacts">contacts</string>
    <string name="sms">sms</string>
    <string name="email">email</string>
    <string name="appcollage_id">appcollage id</string>
    <string name="or_invite_friends_via_your_social_networks">Or invite friends via your social networks.</string>
    <string name="text">Enter your default text</string>
    <string name="five">5</string>
    <string name="text155">155</string>
    <string name="text255">255</string>
    <string name="text55">55</string>
    <string name="appcollage_tutorial_top"><b> appcollage</b> is a mobile photo sharing app that\n
        						lets you see what your friends and family\n
        						are doing at any moment, and share \n
        						that moment\'s memory in a photo collage.</string>
    <string name="appcollage_tutorial_middle"><b>1.</b> Create groups and invite the people you\n
        						 want in that group.\n\n<b>2.</b> Initiate a <b>appcollage</b> request to a group.\n\n<b>3.</b> Every member in your group gets notified\n
    							 about your <b>appcollage</b> request. Everybody has\n
    							 5 minutes to respond by taking a photo\n
    							 and typing a short text of what they are\n
    							 doing at the moment and send it back.\n\n<b>4.</b> Our server compiles the incoming photos\n
    							 and text into a cool photo collage imprinted\n
    							 with the current time and send it back to\n
    							 each group member.</string>
    <string name="appcollage_tutorial_bottom">Do you want to appcollage now?</string>
    <string name="welcome_to_appcollage">WELCOME TO AppCollage</string>
    <string name="cancel">cancel</string>
    <string name="change">change</string>
    <string name="save">save</string>
    <string name="_cancel">Cancel</string>
    <string name="sign_up">sign up</string>
    <string name="not_sure_what_to_do">Not sure what to do</string>
    <string name="click_here">Click here!</string>
    <string name="forgot_pass_message">Did you forget your password?\n
        							   No problem. Enter your email address\n
        							   or username below and we\'ll send you\n
        							   a link to reset your pasword.</string>
    <string name="enter_username_or_email_address">Enter Username or Email Address</string>
    <string name="send">send</string>
    <string name="_send">Send</string>
    <string name="forgot_password_title">FORGOT PASSWORD</string>
    <string name="remove_group">Are you sure you want to\n
       							remove yourself from this\n
       							group?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="from_group">FROM GROUP</string>
    <string name="remove_successful_mag">You successfully removed\n
        								yourself from this group.</string>
    <string name="ok">ok</string>
    <string name="_remove">REMOVE</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="contact_option_msg">To be able to create <b>appcollage</b> memories\n
        you will need to have other members in\n
        your groups.\n\n
        Inviting friends and family is easier by\n
        importing your address book. However if\n
        you decide not to import your contacts,\n
        that\'s ok, you can still find friends by\n
        entering user info manually.\n
        Let\'s Go appcollage!</string>
    <string name="use_address_book">use address book</string>
    <string name="_use_address_book">USE ADDRESS BOOK</string>
    <string name="type_my_contacts">type my contacts</string>
    <string name="via_phone_or_email">via Phone or Email</string>
    <string name="via_phone">via sms</string>
    <string name="via_appcollage_id">via appcollage id</string>
    <string name="via_contacts">via Contacts</string>
    <string name="via_email_address">via Email Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_phone_or_email_id">Enter phone number or email id</string>
    <string name="click_here_to_enter_email_address_instead">Click here to enter Email Address instead.</string>
    <string name="invite_msg_via_contact">Hello I created a group called</string>
    <string name="invite_msg_via_contact1">with an app named <b>appcollage</b> and I\'d like to
        add you to it.\n<b>appcollage</b> lets you see what your
        friends are doing at the moment
        and create real time photo collage
        memories from that moment.</string>
    <string name="tap_invitiation_text_above_to_edit">Tap invitation text above to edit.</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email_address_not_found">Email Address not found</string>
    <string name="group_name">Group Name</string>
    <string name="invition_sent_to">Invitation sent to</string>
    <string name="invition_sent_to_group_nmae">Do you want to invite anybody\n
        else to this group called\n</string>
    <string name="not_now">not now</string>
    <string name="invite_sent">INVITE SENT</string>
    <string name="enter_appcollage_id">Enter appcollage id</string>
    <string name="fetch_contact_msg"><font fgcolor="#ffffff00">appcollage</font> would like to access\n
	    
	    your contacts.</string>
    <string name="to">to  : </string>
    <string name="_to">To  : </string>
    <string name="_for">for : </string>
    <string name="new_message">New Message</string>
    <string name="write_text_your_here">Write your message here</string>
    <string name="fetch_contact_msg_for_empty">The selected name does not contain Email and Phone Number.</string>
    <string name="sent_link_forget_msg">We have sent you a confirmation link to\n
	    reset your password.\n
	    Check your email please. </string>
    <string-array name="select_group">
        <item>Choose Your Group</item>
    </string-array>
    <string name="group_not_exist">No Group Exist.</string>
    <string name="group_members">GROUP MEMBERS</string>
    <string name="sort_inbox">sort inbox</string>
    <string name="from">From : </string>
    <string name="initiated_by">Initiated by : </string>
    <string name="missed">missed</string>
    <string name="date">date</string>
    <string name="participated">participated</string>
    <string name="invitations">invitations</string>
    <string name="attachments">attachments</string>
    <string name="account">account</string>
    <string name="default_texts">default texts</string>
    <string name="help">help</string>
    <string name="_help">HELP</string>
    <string name="logout">logout</string>
    <string name="edit_group">edit group</string>
    <string name="_logout">Logout</string>
    <string name="delete">delete</string>
    <string name="delete_msg">Delete Massage</string>
    <string name="search_by_group_name">Search By Group Name</string>
    <string name="remove_from_msg">    If you remove yourself from a group \n
    the only way you can become a \n
    member again if another member \n
    invites you back.\n\n<b>Are you sure you want to remove </b>\n<b>yourself from this group?</b></string>
    <string name="tap_on_profile">    Tap profile photo to the left to \n
    take a new photo of yourself.</string>
    <string name="change_password">Change Password?</string>
    <string name="_change_password">CHANGE PASSWORD</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="default_text_invite">default text\n<b>invite</b></string>
    <string name="default_text_go_appcollage">default text\n<b>go appcollage</b></string>
    <string name="default_text_response">default text\n<b>response</b></string>
    <string name="_default_text_invite">SET INVITE TEXT</string>
    <string name="_default_text_go_appcollage">SET GO AppCollage TEXT </string>
    <string name="_default_text_response">SET RESPONSE TEXT</string>
    <string name="no_result_found">No result found.</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password_hint">********</string>
    <string name="delete_account_msg">We are sad to see you go.\n
	    							If you are certain you want to delete\n
	    							your appcollage account, please enter your\n
	    							password below to continue.</string>
    <string name="set_default_text">DEFAULT TEXT</string>
</resources>