<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        style="@style/txt_base"
        android:text="@string/message_privacy_and_tc1"
        android:textSize="@dimen/sp_11" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        
        android:orientation="horizontal" >

        <TextView
            style="@style/txt_base"
            android:text="@string/message_privacy_and_tc2"
            android:textSize="@dimen/sp_11" />
        <TextView
            android:id="@+id/privacy_policy"
            style="@style/txt_base"
            android:text="@string/privacy_policy"
            android:textStyle="bold"
            android:textSize="@dimen/sp_11" />
        <TextView
            style="@style/txt_base"
            android:text="@string/and"
            android:textSize="@dimen/sp_11" />
        <TextView
            android:id="@+id/terms_of_service"
            style="@style/txt_base"
            android:text="@string/terms_of_service"
            android:textStyle="bold"
            android:textSize="@dimen/sp_11" />
    </LinearLayout>

</LinearLayout>