<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical" >

    <include layout="@layout/layout_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_25"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/img_account_profile"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="@dimen/dp_90"
                    android:contentDescription="@null"
                    android:src="@drawable/profilephoto" />

                <TextView
                    style="@style/txt_base"
                    android:layout_width="0dp"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1.0"
                    android:singleLine="false"
                    android:text="@string/tap_on_profile"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <TextView
                style="@style/txt_base"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/first_name"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:id="@+id/edt_account_first_name"
                style="@style/edit"
                android:layout_marginBottom="@dimen/dp_1"
                android:hint="@string/enter_first_name"
                android:inputType="textPersonName|textCapWords" />

            <TextView
                style="@style/txt_base"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/last_name"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:id="@+id/edt_account_last_name"
                style="@style/edit"
                android:layout_marginBottom="@dimen/dp_1"
                android:hint="@string/enter_last_name"
                android:inputType="textPersonName|textCapWords" />

            <TextView
                style="@style/txt_base"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/email_address"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:id="@+id/edt_account_email_address"
                style="@style/edit"
                android:layout_marginBottom="@dimen/dp_1"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/txt_base"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/phone_number"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:id="@+id/edt_account_phone_number"
                style="@style/edit"
                android:hint="@string/enter_phone_number"
                android:inputType="phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_account_cancel"
                    style="@style/btn_base"
                    android:layout_marginRight="@dimen/dp_15"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btn_account_save"
                    style="@style/btn_base"
                    android:text="@string/save" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_account_change_password"
                style="@style/txt_base"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/change_password"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>