<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_new"
    android:orientation="vertical" >
    <include 
        layout="@layout/layout_action_bar"/>
    <EditText 
        android:id="@+id/edt_invite_sent_group_name"
        style="@style/edit"
        android:layout_marginTop="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_25"
        android:editable="false"
        android:hint="@string/group_name"/>
    <TextView 
        style="@style/txt_base"
        android:text="@string/invition_sent_to"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/dp_14"/>
    <TextView 
        android:id="@+id/txt_invite_sent_to_user_name"
        style="@style/txt_base"
        android:text="@string/text"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/dp_16"/>
    <TextView 
        android:id="@+id/txt_invite_sent_another_person_group"
        style="@style/txt_base"
        android:singleLine="false"
        android:text="@string/invition_sent_to_group_nmae"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_25"
        android:textSize="@dimen/dp_14"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:gravity="center"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/btn_invite_sent_not_now"
            style="@style/btn_base"
            android:layout_marginRight="@dimen/dp_15"
            android:text="@string/not_now"/>
        <Button 
            android:id="@+id/btn_sent_invite"
            style="@style/btn_base"
            android:text="@string/invite"/>
    </LinearLayout>
</LinearLayout>
