<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical" >

    <include layout="@layout/layout_action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_25"
        android:orientation="vertical" >

        <TextView
            style="@style/txt_base"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/enter_old_password"
            android:textSize="@dimen/sp_15" />

        <EditText
            android:id="@+id/edt_change_old_password"
            style="@style/edit"
            android:layout_marginBottom="@dimen/dp_1"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />

        <TextView
            style="@style/txt_base"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/enter_new_password"
            android:textSize="@dimen/sp_15" />

        <EditText
            android:id="@+id/edt_change_new_password"
            style="@style/edit"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/dp_1"
            android:hint="@string/password_hint" />

        <TextView
            style="@style/txt_base"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/enter_confirm_password"
            android:textSize="@dimen/sp_15" />

        <EditText
            android:id="@+id/edt_change_confirm_password"
            style="@style/edit"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/dp_1"
            android:hint="@string/password_hint" />

        <Button
            android:id="@+id/btn_change_password_save"
            style="@style/btn_base"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>