<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical" >
    <include 
        layout = "@layout/layout_action_bar"/>
    <TextView 
        style="@style/txt_base"
        android:text="@string/forgot_pass_message"
        android:textSize="@dimen/dp_14"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_50"
        android:gravity="center"
        android:singleLine="false"
        android:textStyle="bold"/>
    <EditText 
        android:id="@+id/edt_forgot_userName"
        style="@style/edit"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:hint="@string/enter_username_or_email_address"/>
      <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_forgot_cancel"
                    style="@style/btn_base"
                    android:text="@string/cancel"
                    android:layout_marginRight="@dimen/dp_15" />

                <Button
                    android:id="@+id/btn_forgot_send"
                    style="@style/btn_base"
                    android:text="@string/send" />
            </LinearLayout>
</LinearLayout>
